--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,20 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
+    <div class="container">
+      <h1>Play around and find out</h1>
+      <div id="root"></div>
+      <p>
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc at
+        vulputate arcu. Cras metus ligula, dapibus condimentum sapien rutrum,
+        molestie gravida lectus. Aenean et nunc vel risus fermentum luctus at
+        quis diam. Vestibulum ante ipsum primis in faucibus orci luctus et
+        ultrices posuere cubilia curae; Vestibulum fermentum lacinia velit ut
+        rhoncus. Suspendisse diam ex, pellentesque a tristique non, condimentum
+        vitae quam. Curabitur non efficitur ante, at volutpat ante. Donec odio
+        ligula, molestie vel imperdiet eget, accumsan quis magna. Curabitur ut
+        rutrum dolor.
+      </p>
+    </div>
   </body>
 </html>
