--- a/public/index.html
+++ b/public/index.html
@@ -7,26 +7,47 @@
     <meta name="theme-color" content="#FFFFFF" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="The FAFO meme warns that taking negative steps will result in unwanted consequences. Whilst true, it is also important to remember that equally, taking positive steps can result in positive results."
     />
-    <title>React App</title>
+    <title>Play around and find out!</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div class="container">
-      <h1>Play around and find out</h1>
+      <h1>Play around and find out!</h1>
       <div id="root"></div>
-      <p>
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc at
-        vulputate arcu. Cras metus ligula, dapibus condimentum sapien rutrum,
-        molestie gravida lectus. Aenean et nunc vel risus fermentum luctus at
-        quis diam. Vestibulum ante ipsum primis in faucibus orci luctus et
-        ultrices posuere cubilia curae; Vestibulum fermentum lacinia velit ut
-        rhoncus. Suspendisse diam ex, pellentesque a tristique non, condimentum
-        vitae quam. Curabitur non efficitur ante, at volutpat ante. Donec odio
-        ligula, molestie vel imperdiet eget, accumsan quis magna. Curabitur ut
-        rutrum dolor.
-      </p>
+      <div class="content">
+        <p>
+          The
+          <a
+            href="https://www.tiktok.com/@rogerskaer/video/7147844411915783470"
+            target="blank"
+            >FAFO meme</a
+          >
+          warns that taking negative steps will result in unwanted consequences.
+          Whilst true, it is also important to remember that equally, taking
+          positive steps can result in positive results.
+        </p>
+        <p>
+          In my career as a Software Engineer, if I don't know something, I
+          often play around with new technologies or experiment with ideas. The
+          method is very simple: learn by doing. By never trying new ideas or
+          playing it too safe, you are not likely to progress at a good speed.
+        </p>
+        <p>So the message is simple: play around and find out!</p>
+      </div>
     </div>
+    <footer>
+      <div>
+        By <a href="https://oliverbenns.com" target="_blank">Oliver Benns</a>
+      </div>
+      <div>
+        <a
+          href="https://github.com/oliverbenns/playaroundfindout.com"
+          target="_blank"
+          >Github</a
+        >
+      </div>
+    </footer>
   </body>
 </html>
