--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,20 @@
       content="The FAFO meme warns that taking negative steps will result in unwanted consequences. Whilst true, it is also important to remember that equally, taking positive steps can result in positive results."
     />
     <title>Play around and find out!</title>
+    <!-- Google tag (gtag.js) -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-LRCMX13RDM"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+
+      gtag("config", "G-LRCMX13RDM");
+    </script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
